Fix thanks page mobile line break after lead sentence on small screens

--- a/app/(site)/contact/thanks/thanks.module.css
+++ b/app/(site)/contact/thanks/thanks.module.css
@@ -56,6 +56,10 @@
   margin-bottom: 28px;
 }
 
+.leadBr {
+  display: none;
+}
+
 .noteBr {
   display: none;
 }
@@ -67,6 +71,10 @@
 
   .note {
     text-align: left;
+  }
+
+  .leadBr {
+    display: block;
   }
 
   .noteBr {
